--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ msgpack==1.0.4
 numpy==1.23.4
 oauthlib==3.2.2
 opencv-python==4.6.0.66
+openpyxl==3.0.10
 packaging==21.3
 pafy==0.5.5
 pandas==1.5.1
